--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/chat/chat.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/chat/chat.html
@@ -1,11 +1,11 @@
-<div class="project-detail-page ">
+<div class="project-detail-page px-3">
   <div class="project-chat px-md-0 px-3">
     <h1 class="big text-end text-white mt-5 pt-5 mb-3">PROJECT CHAT</h1>
 
     <div class="project-chat-box rounded-3 p-md-4 text-white ">
       <div class="chat-container">
         <div class="tabs">
-          <button class="tab-button" [class.active]="activeTab === 'chat'"(click)="activeTab = 'chat'">
+          <button class="tab-button" [class.active]="activeTab === 'chat'" (click)="activeTab = 'chat'">
             Chat
           </button>
 
@@ -39,21 +39,59 @@
             <p class="username">{{ message.username }}</p>
 
             <div class="message-content-wrapper">
-              <img [src]="message.userImageUrl ? baseurl  + message.userImageUrl :  'assets/img/chat.png'" class="user-img" />
+              <img [src]="message.userImageUrl ? baseurl  + message.userImageUrl :  'assets/img/chat.png'"
+                class="user-img" />
 
               <div class="d-flex flex-column-reverse gap-1 w-100 message-content">
-                <p class="message-content fst-italic">{{ message.text }}</p>
+                @if (isLink(message.text)) {
+                <a
+                  class="message-content fst-italic  booked"
+                  [href]="formatLink(message.text)"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  {{ message.text }}
+                </a>
+              }
+              @else {
+                <p class="message-content fst-italic">
+                  {{ message.text }}
+                </p>
+              }
 
                 @if (message.files?.length) {
                 <div class="dataShow d-flex align-items-center gap-2">
                   @for (file of message.files; track file.name ; let i = $index) {
-                  <a class="file-card d-flex align-items-center gap-2" target="_blank" [href]="baseurl + file.attachmentUrl" download>
-                    <img class="attach-img" src="assets/img/new-document 2.svg" />
+                   @if(isImage(file.attachmentUrl)){
+                  <a class="file-card d-flex align-items-end justify-content-between gap-2">
+                    <div class="d-flex gap-2">
+                       <img class="attach-img" [src]=" baseurl + file.attachmentUrl" width="35" height="35" />
                     <div class="file-info">
                       <div class="file-name"> File {{i + 1}}</div>
-                      <div class="file-size">{{ file.type }}</div>
+                      <div class="file-size">{{ 4 }} MB</div>
+                    </div>
+                    </div>
+                    <div class="Icon" (click)="downloadFile(file.attachmentUrl)">
+                      <i class="fa-solid fa-download fs-5"></i>
                     </div>
                   </a>
+                  }
+
+                  @else {
+              <a class="file-card d-flex align-items-end justify-content-between gap-2">
+                    <div class="d-flex gap-2">
+                       <img class="attach-img" src="assets/img/new-document 2.svg" />
+                    <div class="file-info">
+                      <div class="file-name"> File {{i + 1}}</div>
+                      <div class="file-size">{{ 4 }} MB</div>
+                    </div>
+                    </div>
+                    <div class="Icon" (click)="downloadFile(file.attachmentUrl)">
+                      <i class="fa-solid fa-download fs-5"></i>
+                    </div>
+                  </a>
+                  }
+                  
                   }
                 </div>
                 }
@@ -72,33 +110,57 @@
 
         <!-- DOCUMENTS TAB -->
         @if (activeTab === 'documents') {
-         <div class="chat-box">
+        <div class="chat-box">
           @if (AttachmentMessages().length === 0) {
           <div class="no-chat-message">No Documents Yet</div>
           } @else {
 
           @for (message of AttachmentMessages(); let i = $index; track message) {
 
-     
 
-          <div class="message p-0 mt-3" >
+
+          <div class="message p-0 mt-3">
 
 
             <div class="message-content-wrapper">
 
               <div class="d-flex flex-column-reverse gap-1 w-100 message-content">
 
-                      @if (message.files.length) {
+
+                @if (message.files.length) {
                 <div class="dataShow d-flex align-items-center gap-2">
                   @for (file of message.files; track file.id ; let i = $index) {
-                  <a class="file-card d-flex align-items-center gap-2" target="_blank" [href]="baseurl + file.fileUrl" download>
-                    <img class="attach-img" src="assets/img/new-document 2.svg" />
+                  @if(isImage(file.fileUrl)){
+                  <a class="file-card d-flex align-items-end justify-content-between gap-2">
+                    <div class="d-flex gap-2">
+                       <img class="attach-img" [src]=" baseurl + file.fileUrl" width="35" height="35" />
                     <div class="file-info">
                       <div class="file-name"> File {{i + 1}}</div>
                       <div class="file-size">{{ 4 }} MB</div>
                     </div>
+                    </div>
+                    <div class="Icon" (click)="downloadFile(file.fileUrl)">
+                      <i class="fa-solid fa-download fs-5"></i>
+                    </div>
                   </a>
                   }
+
+                  @else {
+              <a class="file-card d-flex align-items-end justify-content-between gap-2">
+                    <div class="d-flex gap-2">
+                       <img class="attach-img" src="assets/img/new-document 2.svg" />
+                    <div class="file-info">
+                      <div class="file-name"> File {{i + 1}}</div>
+                      <div class="file-size">{{ 4 }} MB</div>
+                    </div>
+                    </div>
+                    <div class="Icon" (click)="downloadFile(file.fileUrl)">
+                      <i class="fa-solid fa-download fs-5"></i>
+                    </div>
+                  </a>
+                  }
+                  }
+
                 </div>
                 }
               </div>
@@ -116,26 +178,27 @@
 
         <!-- LINKS TAB -->
         @if (activeTab === 'links') {
-           <div class="chat-box">
+        <div class="chat-box">
           @if (messagesLinks().length === 0) {
           <div class="no-chat-message">No Link Yet</div>
           } @else {
 
           @for (message of messagesLinks(); let i = $index; track message) {
 
- 
 
-          <div class="message p-0 pt-4" >
+
+          <div class="message p-0 pt-4">
 
             <p class="username">{{ message.username }}</p>
 
             <div class="message-content-wrapper">
-              <img [src]="message.userImageUrl ? baseurl  + message.userImageUrl :  'assets/img/chat.png'" class="user-img" />
+              <img [src]="message.userImageUrl ? baseurl  + message.userImageUrl :  'assets/img/chat.png'"
+                class="user-img" />
 
               <div class="d-flex flex-column-reverse gap-1 w-100 message-content">
-                <p class="message-content fst-italic">{{ message.link }}</p>
+                <a class="message-content fst-italic booked" [href]="message.link" target="_blank"> {{ message.link }}</a>
 
-               
+
               </div>
             </div>
 
@@ -183,4 +246,4 @@
     </button>
   </div>
 </div>
-<!-- End project chat -->
+<!-- End project chat --> 
