--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.scss
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.scss
@@ -27,7 +27,7 @@
 }
 .cardEmpty{
   background-color: #2D2D2D;
-    height: 150px  !important;
+  height: 130px  !important;
 
 }
 /* the visible filled bar */
@@ -69,7 +69,7 @@
 }
 .post-card img {
   object-fit: cover;
-  height: 150px  !important;
+  height: 130px  !important;
 }
 
 .cardSelect {
@@ -83,8 +83,17 @@
   justify-content: space-between;
   align-items: center;
   margin: 10px 0;
-}
 
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+  background: #0B6B6E;
+ padding: 10px;
+ border-radius: 5px;
+}
 .header span, .footer span {
   cursor: pointer;
   user-select: none;
@@ -99,4 +108,12 @@
 
 .blue.btnlink{
   cursor: pointer;
+}
+.btn{
+      background: rgba(11, 107, 110, 0.2);
+    padding: 10px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    width: 100px;
+    color: #fff;
 }
