--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/show-post/show-post.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/show-post/show-post.html
@@ -1,4 +1,4 @@
-<div class="d-flex col p-4 rounded-3 " style="background-color: #2d2d2d">
+<div class="d-flex col p-4 rounded-3 mt-5" style="background-color: #2d2d2d">
   <div class="col-7 pe-3">
     <div class="d-flex align-items-center">
       <h3 class="mb-0">Post {{ posts().number }}</h3>
@@ -10,10 +10,10 @@
     <h6 class="mt-4 pt-3">Title :</h6>
     <p>{{ posts().title }}</p>
     <h6 class="mt-4 pt-3">Caption :</h6>
-    <p style="text-align: justify">{{ posts().captionEng }}</p>
-    <h6 class="text-end mt-4 pt-3">: وصف</h6>
+    <p class="decScroll" style="text-align: justify">{{ posts().captionEng }}</p>
+    <h6  class="text-end mt-4 pt-3">: وصف</h6>
 
-    <P class="text-end" style="text-align: justify">{{ posts().captionAra }}</P>
+    <P   class="text-end decScroll" style="text-align: justify">{{ posts().captionAra }}</P>
   </div>
   <div class="col-5 ps-4">
     <div class="upload position-relative">
