--- a/src/app/Pages/project-details/components/todolist/todolist.html
+++ b/src/app/Pages/project-details/components/todolist/todolist.html
@@ -21,7 +21,7 @@
           <p class="todo-text">{{ item.text }}</p>
         </div>
 
-        <button class="star-btn" [class.active]="item.starred" (click)="toggleStar(item)">
+        <button class="star-btn  mb-0" [class.active]="item.starred" (click)="toggleStar(item)">
           <i class="fa fa-star"></i>
         </button>
 
@@ -44,7 +44,7 @@
           <p class="todo-text done">{{ item.text }}</p>
         </div>
 
-        <button class="star-btn" [class.active]="item.starred" (click)="toggleStar(item)">
+        <button class="star-btn mb-0" [class.active]="item.starred" (click)="toggleStar(item)">
           <i class="fa fa-star"></i>
         </button>
 
