--- a/src/app/Pages/projects/projectDetalis/components/feedback/feedback.html
+++ b/src/app/Pages/projects/projectDetalis/components/feedback/feedback.html
@@ -5,7 +5,7 @@
                     <h1 class=" text-end px-0 ">FEEDBACKS</h1>
  
         </div>
-        <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box mb-5 pe-lg-4">
+        <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box  pe-lg-4">
             <div class="col-1 p-0 mt-0">
                 <p class="mb-0">AVERAGE </p>
                 <h2 class="mb-0">FEEDBACK</h2>
@@ -56,7 +56,7 @@
                   </div>
                 }
             </div>
-            <h1 class="text-end pe-0 date">{{currentYear}}</h1>
+            <h1 class="text-end pe-0 date mt-0">{{currentYear}}</h1>
         </div>
 
 
