done all login and desgin notes

--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.html
@@ -125,40 +125,47 @@
       <div class="d-flex justify-content-between align-items-start px-0 my-3 px-3">
         <p class="p-0 m-0">Project Progress</p>
         <div class="d-flex gap-1 ps-5">
-          <button class="btn">+25%</button>
-          <button class="btn">+50%</button>
-          <button class="btn" >+75%</button>
-          <button class="btn" >+100%</button>
+  <button class="btn" (click)="updateProgress(0)">+25%</button>
+  <button class="btn" (click)="updateProgress(1)">+50%</button>
+  <button class="btn" (click)="updateProgress(2)">+75%</button>
+  <button class="btn" (click)="updateProgress(3)">+100%</button>
         </div>
       </div>
-    <div class="px-3">
-         <div class="loader rounded py-4 px-3" style="background-color: #2d2d2d; color: white">
-        <div class="d-flex w-100 align-items-start   justify-content-between ">
-          <div>
-            <h1 id="percentText" class="mb-0" style="font-size: 70px">
-              <span id="percentValue" contenteditable="true" aria-label="Edit percentage">60</span>
-              <span class="text-white-50">%</span>
-            </h1>
-          </div>
+   <div class="px-3">
+  <div class="loader rounded py-4 px-3" style="background-color: #2d2d2d; color: white">
 
-          <div class="">
-            <p class="mb-0">Collaborators</p>
-            <div class="d-flex">
-              <img class="me-1 rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
-              <img class="me-1 rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
-              <img class="me-1 rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
-              <img class="rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
-            </div>
-          </div>
-        </div>
+    <div class="d-flex w-100 align-items-start justify-content-between">
+      <div>
+        <h1 class="mb-0" style="font-size: 70px">
+          {{ progress }}
+          <span class="text-white-50">%</span>
+        </h1>
+      </div>
 
-        <div class="bar-wrapper mt-3 rounded-3 " style="height: 12px">
-          <div id="barGlow" class="bar-glow"></div>
+      <div>
+        <p class="mb-0">Collaborators</p>
+        <div class="d-flex gap-1 justify-content-end">
+  <img
+    *ngFor="let emp of Collaborators()"
+    [src]="baseurl + emp.imageUrl"
+    [alt]="emp.name"
+    class=" rounded-3"
+    height="50"
+    width="50"
+  />
+</div>
 
-          <div id="loaderBar" class="bar-fill"></div>
-        </div>
       </div>
     </div>
+
+    <div class="bar-wrapper mt-3 rounded-3" style="height: 12px">
+      <div class="bar-glow" [style.width.%]="progress"></div>
+      <div class="bar-fill" [style.width.%]="progress"></div>
+    </div>
+
+  </div>
+</div>
+
     </div>
   </div>
 </div>
