--- a/src/app/Pages/Auth/signup/signup.html
+++ b/src/app/Pages/Auth/signup/signup.html
@@ -40,6 +40,6 @@
 
 
     </form>
-          <h2 class="mt-5 text-end pt-sm-4 logout" style="color: #00bec5;"         (click)="onSubmit()">SUBMIT <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
+          <h2 class="mt-5 text-end pt-sm-4 logout" style="color: #00bec5;"      >SUBMIT <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
 
   </div>
