--- a/src/app/Pages/projects/projectDetalis/components/feedback/feedback.html
+++ b/src/app/Pages/projects/projectDetalis/components/feedback/feedback.html
@@ -22,7 +22,7 @@
      
             <div class="feed-boxfeed px-0">
                 
-                   @for (feedback of Feedbacks(); track   feedback.id ; let i = $index) {
+                   @for (feedback of Feedbacks(); track  $index ; let i = $index) {
                     <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr" [routerLink]="['/getfeedback',feedback.id]">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
