--- a/src/app/Pages/profile/profile.html
+++ b/src/app/Pages/profile/profile.html
@@ -8,10 +8,10 @@
 
                 <div class="d-flex flex-column justify-content-center align-items-end">
                     @switch (aboutEmployees()?.employeeBadge) {
-                    @case (0) { <img class="me-2" width="50" src="assets/employeeBadge/Subtract1.svg" alt=""> }
-                    @case (1) { <img class="me-2" width="50" src="assets/employeeBadge/Subtract2.svg" alt=""> }
-                    @case (2) { <img class="me-2" width="50" src="assets/employeeBadge/Subtract3.svg" alt=""> }
-                    @case (3) { <img class="me-2" width="50" src="assets/employeeBadge/Subtract4.svg" alt=""> }
+                    @case (0) { <img  width="50" src="assets/employeeBadge/Subtract1.svg" alt=""> }
+                    @case (1) { <img  width="50" src="assets/employeeBadge/Subtract2.svg" alt=""> }
+                    @case (2) { <img  width="50" src="assets/employeeBadge/Subtract3.svg" alt=""> }
+                    @case (3) { <img  width="50" src="assets/employeeBadge/Subtract4.svg" alt=""> }
                     }
                     @switch (aboutEmployees()?.employeeBadge) {
                     @case (0) { <p class="mt-1 text-end mb-0 small">Rising Talent</p> }
