--- a/src/app/Pages/client-profile/Components/feedback-client/feedback-client.html
+++ b/src/app/Pages/client-profile/Components/feedback-client/feedback-client.html
@@ -8,17 +8,17 @@
                 <div class="d-flex align-items-center mt-0">
                     <div class="stars">
                         @for (s of [1, 2, 3, 4, 5]; track $index) {
-                        <button class="star-btn" [class.active]="s <= 1">
-                            <i class="fa fa-star"></i>
-                        </button>
-                        }
+            <button class="star-btn" [class.active]="s <=  Feedbacks().overAllRate">
+                                <i class="fa fa-star"></i>
+                            </button>
+                            }
                     </div>
                 </div>
             </div>
    
             <div class="feed-boxfeed px-0">
                 
-                   @for (feedback of Feedbacks(); track  $index ; let i = $index) {
+                   @for (feedback of Feedbacks().feedbacks; track  $index ; let i = $index) {
                     <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr"  [routerLink]="['/getfeedback',feedback.id]">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
