--- a/src/app/Pages/client/client.html
+++ b/src/app/Pages/client/client.html
@@ -23,17 +23,17 @@
             <h6 class="text-white mb-0">15</h6>
 
             <div class="leftBottom h-100 ">
-                <div class="mb-3">
-                                            <p class="p-0 m-0   align-content-start w-100">INCREASE</p>
+              <div class="mb-3">
+                <p class="p-0 m-0   align-content-start w-100">INCREASE</p>
 
-                </div>
-                <div class="m-0 d-flex gap-2 align-items-end ">
-                    <img class=" " width="22" src="assets/img/Arrow 1.svg" alt="">
-                                                <h5 class="p-0 h3 m-0  ">30%</h5>
+              </div>
+              <div class="m-0 d-flex gap-2 align-items-end ">
+                <img class=" " width="22" src="assets/img/Arrow 1.svg" alt="">
+                <h5 class="p-0 h3 m-0  ">30%</h5>
 
 
-                </div>
-   
+              </div>
+
             </div>
           </div>
         </div>
@@ -43,11 +43,7 @@
           <div class="dropdown text-end">
             <div class="select" (click)="toggleMenu()">
               <div class="caret">
-                <i
-                  class="fa-solid fa-angle-down fs-5"
-                  [class.rotate]="isOpen"
-                  style="color: #00bec5"
-                >
+                <i class="fa-solid fa-angle-down fs-5" [class.rotate]="isOpen" style="color: #00bec5">
                 </i>
               </div>
               <span class="selected fs-2">{{ selected.label }}</span>
@@ -98,7 +94,7 @@
       <div class="card-box row">
         @for (project of projects(); track project.id) {
 
-        <div class="col-lg-3 col-md-4 col-12 mt-3 me-0 cards">
+        <div class="col-lg-3 col-md-6 col-12 mt-3 me-0 cards">
           <a [routerLink]="['/client', project.id]" class="text-decoration-none text-white">
             <div class="card position-relative">
               <div class="cardOptions">
@@ -108,34 +104,33 @@
                 </div>
               </div>
               <div class="typeClient">
-                       @switch (project.clientType) {
-                                        @case (0) { <h6 class="booked  mb-0"> OLD CLIENT</h6> }
-                                        @case (1) { <h6 class="booked  mb-0">LONG TERM</h6> }
-                                        @case (2) { <h6 class="booked  mb-0">NEW CLIENT </h6> }
-                                        }
+                @switch (project.clientType) {
+                @case (0) { <h6 class="booked  mb-0"> OLD CLIENT</h6> }
+                @case (1) { <h6 class="booked  mb-0">LONG TERM</h6> }
+                @case (2) { <h6 class="booked  mb-0">NEW CLIENT </h6> }
+                }
               </div>
 
-              <img
-                [src]="baseimageUrl + project.imageUrl"
-                height="300px"
-                class="card-img-top"
-                alt="{{ project.title }}"
-              />
+              <img [src]="baseimageUrl + project.imageUrl" height="300px" class="card-img-top"
+                alt="{{ project.title }}" />
               <div class="pb-0 card-body">
                 <h6 class="mb-1 fw-bold card-title">{{ project.name }}</h6>
                 <h5 class="mb-1 card-text">{{ project.userName }}</h5>
                 <p>{{ project.createdAt | date }}</p>
-                 <div class="mt-4 row">
-                                    <div class="col ">
-                                   <h6 class="mb-3 booked  mb-0">{{project.services[0].name}} </h6>
-                                    </div>
+                <div class="mt-4 row">
+                  <div class="col ">
+                    <h6 class="mb-3 booked  mb-0">{{project.services[0].name}} </h6>
+                  </div>
 
-                                    <div class="col text-end">
-                                      <p class="mb-3 mb-0">In Progress </p>
-                                    </div>
-                                </div>
+                  <div class="col text-end">
+                    @switch (project.clientProjectStatus) {
+                    @case (0) { <p class="mb-3 mb-0">In Progress </p> }
+                    @case (1) { <p class="mb-3 mb-0">Paused</p> }
+                    @case (2) { <p class="mb-3 mb-0">Completed </p> }
+                    } </div>
+                </div>
               </div>
-              
+
             </div>
           </a>
         </div>
@@ -153,12 +148,8 @@
         </button>
         <div class="pages">
           @for (page of visiblePages; track page) {
-          <button
-            class="page"
-            [class.active]="page === currentPage()"
-            [disabled]="page === currentPage()"
-            (click)="goToPage(page)"
-          >
+          <button class="page" [class.active]="page === currentPage()" [disabled]="page === currentPage()"
+            (click)="goToPage(page)">
             {{ page }}
           </button>
           }
@@ -169,4 +160,3 @@
     </div>
   </div>
 </div>
-
