--- a/src/app/Pages/projects/editproject/editproject.html
+++ b/src/app/Pages/projects/editproject/editproject.html
@@ -153,7 +153,8 @@
           <div class="row my-4 px-0">
   <div class="div col me-lg-5 px-0" *ngIf="projectType() != 0">
     <p class="">Repeated Payment</p>
-    <input #Month type="number" class="text-white w-100 ps-0 py-1 mt-2" placeholder="Repeated Count" />
+    <input  [value]="month()"
+        (input)="month.set($any($event.target).value)" type="number" class="text-white w-100 ps-0 py-1 mt-2" placeholder="Repeated Count" />
   </div>
 
   <div class="col"[ngClass]="{
@@ -180,7 +181,6 @@
     </div>
 
     <h2 class="mt-3  px-3 text-end pt-sm-4 logout" style="color: #00bec5" (click)="updateProject()">
-      ADD PROJECT
-      <i class="ps-3 fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
+Edit PROJECT      <i class="ps-3 fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
     </h2>
 </div>
