--- a/src/app/Pages/projects/feedback-profile/feedback-profile.html
+++ b/src/app/Pages/projects/feedback-profile/feedback-profile.html
@@ -52,7 +52,7 @@
                   </div>
                 }
             </div>
-            <h1 class="text-end pe-0 date">{{currentYear}}</h1>
+            <h1 class="text-end pe-0 date mt-4">{{currentYear}}</h1>
         </div>
 
 
