--- a/src/styles.scss
+++ b/src/styles.scss
@@ -693,7 +693,10 @@ body {
 .drag-area {
     border: 2px dashed #676767;
 }
-
+.attach-img{
+  object-fit: cover;
+  border-radius: 5px;
+}
 @media (max-width:776px){
     .project-detail-page .big {
         font-size: 25px;
