--- a/src/app/Pages/projects/projects/projects.html
+++ b/src/app/Pages/projects/projects/projects.html
@@ -2,7 +2,7 @@
     <div class="d-flex justify-content-between align-items-center headerText">
         <h2 class=" pt-sm-4 logout" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">Add Project <i
                 class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
-        <h1 class=" big">PROJECTS</h1>
+        <h1 class=" big mb-0">PROJECTS</h1>
 
     </div>
     <div class=" p-md-5 p-3 rounded team-container">
