--- a/src/app/Pages/client/components/addclients/addclients.html
+++ b/src/app/Pages/client/components/addclients/addclients.html
@@ -39,6 +39,8 @@
           <input class="mt-3 px-0" type="text" formControlName="username" placeholder="Username" />
           <input class="mt-4 px-0" type="text" formControlName="location" placeholder="Location" />
           <input class="mt-3 px-0 mb-2" type="text" formControlName="website" placeholder="Website" />
+                    <input class="mt-3 px-0 mb-2" type="tel" formControlName="PhoneNumber" placeholder="PhoneNumber" />
+
         </div>
 
         <!-- Client Title -->
