--- a/src/app/Pages/home/components/addemployee/addemployee.html
+++ b/src/app/Pages/home/components/addemployee/addemployee.html
@@ -36,6 +36,8 @@
           <input class="mt-4 px-0" type="email" formControlName="email" placeholder="Email" />
           <input class="mt-3 px-0" type="password" formControlName="password" placeholder="Password" />
           <input class="mt-3 px-0 mb-2" type="text" formControlName="username" placeholder="Username" />
+                    <input class="mt-3 px-0 mb-2" type="tel" formControlName="PhoneNumber" placeholder="Phone Number" />
+
         </div>
 
         <!-- Client Title -->
