--- a/src/app/Pages/payments-admin/payments-admin.scss
+++ b/src/app/Pages/payments-admin/payments-admin.scss
@@ -14,6 +14,10 @@
   margin: 0 5px ;
   
 }
+.isLate{
+    background: linear-gradient(90deg, rgba(45, 45, 45, 0) 0%, rgba(214, 13, 13, 0.192) 66.35%);
+
+}
 .line{
     width: 3px;
     height: 400px;
