--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/addpost/addpost.scss
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/addpost/addpost.scss
@@ -6,7 +6,31 @@
     border-radius: 8px;
     height: 12px;
 }
+.upload-Cover {
+  background-color: #1b1b1b;
+  position: absolute;
+  right: 10px;
+  top: 0;
+  width: 85px;
+  height: 85px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  cursor: pointer;
+  overflow: hidden;
 
+  i {
+    color: #aaa;
+    font-size: 20px;
+  }
+}
+
+.cover-preview {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /* blurred gradient glow that follows the same width as the fill */
 .bar-glow {
     position: absolute;
