--- a/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
@@ -45,12 +45,29 @@
         “ {{ aboutproject()?.projectDescription }} “
       </p>
         <h6 class="">ATTACHMENTS</h6>
-                 <div class="d-flex w-100 flex-wrap gap-2 ">
-                  @for (file of aboutproject()?.projectAttachment; track $index ) {
-                    <div class=""><img class="attach-img" height="70" width="100" [src]="baseimageUrl + file" alt=""></div>
-                  }
-                  
-                 </div>
+     <div class="d-flex w-100 flex-wrap gap-2">
+  @for (file of aboutproject()?.projectAttachment; track $index) {
+    <div class="img-wrapper">
+      
+      <img
+        class="attach-img"
+        height="70"
+        width="100"
+        [src]="baseimageUrl + file"
+        alt=""
+      />
+
+      <div
+        class="Icon"
+        (click)="downloadFile(file)"
+      >
+        <i class="fa-solid fa-download fs-5"></i>
+      </div>
+
+    </div>
+  }
+</div>
+
              
       <p class="small-2  mt-3">Add Attachment</p>
 
