--- a/src/app/Pages/home/components/addemployee/addemployee.scss
+++ b/src/app/Pages/home/components/addemployee/addemployee.scss
@@ -3,3 +3,8 @@
   grid-template-columns: repeat(2, 1fr); 
   width: 60%;
 }
+.btn{
+    box-shadow:  none !important;
+    font-size: 2rem !important;
+    
+} 
