--- a/src/app/Pages/projects/editproject/editproject.scss
+++ b/src/app/Pages/projects/editproject/editproject.scss
@@ -52,3 +52,6 @@
     border-bottom: 1px solid var(--blue);
     transform: scale(1.05);
   }
+    .btn{
+    box-shadow:  none !important;
+    font-size: 2rem !important;}
