--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,10 @@ body {
     font-size: 13px !important;
     justify-content: center;
 }
+button{
+    box-shadow:  none !important;
+    
+}
 
 .container{
     background-size: contain;
