--- a/src/app/Pages/home/components/editemployee/editemployee.scss
+++ b/src/app/Pages/home/components/editemployee/editemployee.scss
@@ -2,4 +2,8 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr); 
   width: 60%;
-}
+}.btn{
+    box-shadow:  none !important;
+    font-size: 2rem !important;
+    
+} 
