--- a/src/app/Pages/projects/addproject/addproject.html
+++ b/src/app/Pages/projects/addproject/addproject.html
@@ -174,8 +174,19 @@
 
   </div>
 
-  <h2 class="mt-3  px-3 text-end pt-sm-4 logout cr" style="color: #00bec5" (click)="addProject()">
+
+   <div class="w-100  d-flex    justify-content-end align-items-center">
+    <button
+    class="mt-3 btn border-0 text-end logout px-3"
+    style="color: #00bec5; cursor: pointer;"
+    (click)="addProject()"
+      [disabled]="isLoading()"
+  [style.cursor]="isLoading() ? 'not-allowed' : 'pointer'"
+  >
+         {{ isLoading() ? 'Adding...' : 'Add Project' }}
+
     ADD PROJECT
-    <i class="ps-3 fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
-  </h2>
+    <i class=" fa-solid fa-arrow-right fs-4" style="color: #00bec5;"></i>
+  </button>
+ </div>
 </div>
