--- a/src/app/Pages/projects/editproject/editproject.html
+++ b/src/app/Pages/projects/editproject/editproject.html
@@ -180,7 +180,16 @@
       </div>
     </div>
 
-    <h2 class="mt-3  px-3 text-end pt-sm-4 logout" style="color: #00bec5" (click)="updateProject()">
-Edit PROJECT      <i class="ps-3 fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
-    </h2>
+  
+    <div class="w-100  d-flex    justify-content-end align-items-center">
+      <button
+        class="px-4 py-2 rounded-3 text-white border-0 mt-3"
+        style="background-color: #0b6b6e"
+        (click)="updateProject()"
+        [disabled]="isLoading()"
+        [style.cursor]="isLoading() ? 'not-allowed' : 'pointer'"
+      >
+       {{ isLoading() ? 'Updating...' : 'Update Project' }}
+      </button>
+      </div>
 </div>
