--- a/src/app/Pages/projects/projectDetalis/components/update-campaign-stats/update-campaign-stats.html
+++ b/src/app/Pages/projects/projectDetalis/components/update-campaign-stats/update-campaign-stats.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="p-3 rounded-3 mt-5 field-box">
-        <div class="d-flex text-center">
+        <div class="statesCards">
           @for (f of fields(); track f; let i = $index) {
           <div class="col field-item">
             <input
