--- a/src/app/Pages/service/components/addservice/addservice.html
+++ b/src/app/Pages/service/components/addservice/addservice.html
@@ -18,9 +18,20 @@
     </form>
 
     <!-- Submit -->
-    <h2 class="mt-3 text-end pt-sm-4 logout px-3"     (click)="onSubmit()"
- style="color: #00bec5; cursor: pointer;">
-        ADD Service
-        <i class="ps-3 fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i>
-    </h2>
+
+    <div class="w-100  d-flex    justify-content-end align-items-center">
+    <button
+    class="mt-3 btn border-0 text-end logout px-3"
+    style="color: #00bec5; cursor: pointer;"
+    (click)="onSubmit()"
+      [disabled]="isLoading()"  
+  [style.cursor]="isLoading() ? 'not-allowed' : 'pointer'"
+  >
+         {{ isLoading() ? 'Adding...' : 'Add Service' }}
+
+    <i class=" fa-solid fa-arrow-right fs-4" style="color: #00bec5;"></i>
+    </button>
+
+    </div>
+
 </div>
