--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.html
@@ -45,12 +45,29 @@
         “ {{ aboutproject()?.projectDescription }} “
       </p>
         <h6 class="">ATTACHMENTS</h6>
-                 <div class="d-flex w-100 flex-wrap gap-2 ">
-                  @for (file of aboutproject()?.projectAttachment; track $index ) {
-                    <div class=""><img class="attach-img" height="70" width="100" [src]="baseimageUrl + file" alt=""></div>
-                  }
-                  
-                 </div>
+     <div class="d-flex w-100 flex-wrap gap-2">
+  @for (file of aboutproject()?.projectAttachment; track $index) {
+    <div class="img-wrapper">
+      
+      <img
+        class="attach-img"
+        height="70"
+        width="100"
+        [src]="baseimageUrl + file"
+        alt=""
+      />
+
+      <div
+        class="Icon"
+        (click)="downloadFile(file)"
+      >
+        <i class="fa-solid fa-download fs-5"></i>
+      </div>
+
+    </div>
+  }
+</div>
+
              
       <p class="small-2  mt-3">Add Attachment</p>
 
@@ -86,11 +103,16 @@
             <img src="assets/img/new-document 2.png" alt="" />
           </div>
         </div>
-
-        <button (click)="uploadFiles()" id="uploadButton" class="border-0 rounded-3 w-100 text-white small pt-2 mt-4"
+  <button (click)="uploadFiles()" id="uploadButton"
+     [disabled]="isLoading()"
+        [style.cursor]="isLoading() ? 'not-allowed' : 'pointer'"
+        
+        class="border-0 rounded-3 w-100 text-white small py-2 mt-4"
           style="background-color: #0b6b6e">
-          UPLOAD
+                 {{ isLoading() ? 'UPLOADING...' : 'UPLOAD' }}
+
         </button>
+
 
         <input type="file" id="fileInput" hidden #fileInput (change)="onFileSelected($event)" multiple />
       </div>
@@ -101,7 +123,7 @@
 <button
   class="border-0 rounded-3 text-white small px-md-4 px-3 pt-1 mt-4 end-but"
   style="background-color: #0b6b6e"
-  (click)="changeStatus()">
+>
 
   @switch (aboutproject()?.projectStatus) {
     @case (0) { <p class="mt-0 mb-0">In Progress</p> }
@@ -126,7 +148,6 @@
     </div>
   </div>
 </div>
-
 @if(aboutproject()?.projectType == 1){
 <app-posts />
 
