--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.scss
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.scss
@@ -5,9 +5,6 @@
   border-radius: 8px;
 
 }
-img{
-  object-fit: cover;
-}
 .file-card {
   display: flex;
   align-items: center;
@@ -50,3 +47,35 @@ img{
  a{
   text-decoration: none;
  }
+img{
+  object-fit: cover;
+}
+
+.img-wrapper {
+  position: relative;
+  cursor: pointer;
+}
+
+.Icon {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 5px;
+}
+
+.img-wrapper:hover .Icon {
+  opacity: 1;
+}
+
+.attach-img {
+  border-radius: 6px;
+  object-fit: cover;
+}
