done before responsive

--- a/src/app/Layout/footer/footer.html
+++ b/src/app/Layout/footer/footer.html
@@ -1,22 +1,22 @@
 <!-- Start footer -->
-<div class="footer text-white">
+<div class="footer ps-4 text-white mt-5">
     <div class="px-4" style="background-image: none;">
         <div class="row">
             <div class="col-lg-4 col-12 text-start px-0 start text-lg-start text-center">
                 <div class="d-flex mx-0  justify-content-center justify-content-lg-start ms-5 ps-3 ps-sm-0 ms-lg-0">
                     <div class="d-flex  p-0">
-                        <div>
+                        <div class="cr">
                             <p class="text-center mt-2">INSTAGRAM</p>
                         </div>
                         <div><img class="ms-3" src="assets/img/Rectangle 7.png" alt=""></div>
                     </div>
                     <div class="d-flex p-0">
-                        <div>
+                        <div class="cr">
                             <p class="text-center mt-2 ms-3">INSTAGRAM</p>
                         </div>
                         <div><img class="ms-3" src="assets/img/Rectangle 7.png" alt=""></div>
                     </div>
-                    <div class="d-flex px-0  text-lg-center text-start pt-2">
+                    <div class="d-flex px-0 cr  text-lg-center text-start pt-2">
                         <p class=" ms-3">LINKEDIN</p>
                     </div>
                 </div>
@@ -24,7 +24,7 @@
             <div class="col-lg-4 col-12 pe-0 ps-lg-5 mt-lg-0 mt-3 text-center">
                 GENESIS @ {{currentYear}}
             </div>
-            <div class="col-lg-4 col-12 mt-lg-0 mt-3 ps-lg-5 pe-0 ms-lg-5 end text-center text-lg-end">
+            <div class="col-lg-4 cr col-12 mt-lg-0 mt-3 ps-lg-5 pe-0 ms-lg-5 end text-center text-lg-end">
                 <p>INFO@GENESISBRADNINGSTUDIO.COM</p>
             </div>
         </div>
